# motor-vehicle-collisions

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: demo.html  main.py  schemas.py
artifacts/: automl_leaderboard.csv  drift_report.md  feature_metadata.json  model_comparison.csv
data/sample/: Motor_Vehicle_Collisions-Crashes_20251211.csv
scripts/: compare_models.py  demo_requests.py  drift_analysis.py  run_automl.py  train_elastic_net.py  train_gradient_boosting.py  train_random_forest.py
src/collisions/: data_cleaning.py  settings.py  training_utils.py
